[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "heco"
version = "0.0.2a1" # Alpha release, following PEP440
authors = [
    { name="Alex Viand", email="alexander.viand@inf.ethz.ch" },
]
description = "HECO is an optimizing compiler for Fully Homomorphic Encryption (FHE)."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">= 3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "xdsl @ git+https://github.com/xdslproject/xdsl.git@frontend"
]

[project.urls]
"Homepage" = "https://github.com/MarbleHE/HECO"
"Bug Tracker" = "https://github.com/MarbleHE/HECO/issues"

[tool.pyright]
include = ["src"]
reportImportCycles = false
reportUnnecessaryIsInstance = false
