[metadata]
name = heco
version = 0.0.1
author = Alex Viand
author_email = alexander.viand@inf.ethz.ch
description = HECO is an optimizing compiler for Fully Homomorphic Encryption (FHE).
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MarbleHE/HECO
project_urls =
    Bug Tracker = https://github.com/MarbleHE/HECO/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10

[options.package_data]
xdsl = py.typed

[options.packages.find]
where = src
